# oxygin

./: .gitignore  Cargo.toml  README.md
bundle_derive/: Cargo.toml
bundle_derive/src/: lib.rs
component_macro/: Cargo.toml
component_macro/src/: lib.rs
src/: lib.rs  main.rs
src/app/: app.rs  app_state.rs  mod.rs
src/bundles/: mod.rs
src/components/: mod.rs
src/ecs/: bundle.rs  component.rs  ecs.rs  macros.rs  mod.rs  resource.rs  system.rs
src/render/: asset_manager.rs  instance.rs  mod.rs  render_state.rs  shader.wgsl  vertex.rs
src/resources/: mod.rs
src/systems/: eat.rs  gravity.rs  input.rs  mod.rs  movement.rs  render.rs  spawn.rs
