workspace = { members = ["bundle_derive"] }
[package]
name = "oxygin"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
anymap = "0.12.1"
eyre = "0.6.12"
rand = "0.8.5"
sdl2 = "0.36.0"
slotmap = "1.0.7"
bundle_derive = { path = "./bundle_derive" }
wgpu = "0.20.1"
winit = "0.29.15"
pollster = "0.3.0"
bytemuck = { version = "1.16.0", features = ["derive"] }
nalgebra = "0.32.6"
